--- a/orderingservice.properties
+++ b/orderingservice.properties
@@ -1,2 +1,5 @@
-spring.cloud.config.server.git.uri=file:C:/Users/vmadmin.coursevm.000/Desktop/config
+spring.datasource.url= jdbc:mysql://localhost:3306/orderdb
+
+restaurant.search.item.url= http://localhost:8123/item/id/
+server.port=8123
 
