--- a/restaurantsearchservice.properties
+++ b/restaurantsearchservice.properties
@@ -1,2 +1,2 @@
-spring.cloud.config.server.git.uri=file:C:/Users/vmadmin.coursevm.000/Desktop/config
-
+spring.datasource.url=jdbc:mysql://localhost:3306/restaurantdb
+server.port=8789
