--- a/application.properties
+++ b/application.properties
@@ -13,4 +13,4 @@ logging.level.org.springframework=ERROR
 logging.level.com.eatza=DEBUG
 logging.pattern.console=%clr(%d{yy-MM-dd E HH:mm:ss.SSS}){blue} %clr(%-5p) %clr(${PID}){faint} %clr(---){faint} %clr([%8.15t]){cyan} %clr(%-40.40logger{0}){blue} %clr(:){red} %clr(%m){faint}%n
 
-eureka.client.serviceUrl.defaultZone=http://172.18.0.2:8345/eureka/
+eureka.client.serviceUrl.defaultZone=http://eurekaservice-container:8345/eureka/
