--- a/restaurantsearchservice.properties
+++ b/restaurantsearchservice.properties
@@ -1,6 +1,6 @@
 #docker config
-#spring.datasource.url=jdbc:mysql://mysql-standalone:3306/restaurantdb    
+spring.datasource.url=jdbc:mysql://mysql-standalone:3306/restaurantdb    
 
 #localhost config
-spring.datasource.url=jdbc:mysql://localhost:3306/restaurantdb     
+#spring.datasource.url=jdbc:mysql://localhost:3306/restaurantdb     
 server.port=8789
