--- a/restaurantsearchservice.properties
+++ b/restaurantsearchservice.properties
@@ -1,5 +1,5 @@
 #docker config
-#spring.datasource.url=jdbc:mysql://mysql-standalone:3306/restaurantdb    
+spring.datasource.url=jdbc:mysql://mysql-standalone:3306/restaurantdb    
 
 #localhost config
 #spring.datasource.url=jdbc:mysql://localhost:3306/restaurantdb     
