--- a/restaurantsearchservice.properties
+++ b/restaurantsearchservice.properties
@@ -1,6 +1,8 @@
 #docker config
 spring.datasource.url=jdbc:mysql://mysql-standalone:3306/restaurantdb    
 
+eureka.client.serviceUrl.defaultZone=http://eurekaservice-container:8345/eureka/
+
 #localhost config
 #spring.datasource.url=jdbc:mysql://localhost:3306/restaurantdb     
 #server.port=8789
