--- a/orderingservice.properties
+++ b/orderingservice.properties
@@ -1,5 +1,5 @@
 #spring.datasource.url= jdbc:mysql://localhost:3306/orderdb
-
+eureka.client.serviceUrl.defaultZone=http://eurekaservice-container:8345/eureka/
 #restaurant.search.item.url= http://localhost:8123/item/id/
 #server.port=8123
 
