--- a/restaurantsearchservice.properties
+++ b/restaurantsearchservice.properties
@@ -5,4 +5,4 @@ eureka.client.serviceUrl.defaultZone=http://eurekaservice-container:8345/eureka/
 
 #localhost config
 #spring.datasource.url=jdbc:mysql://localhost:3306/restaurantdb     
-#server.port=8789
+server.port=8789
