--- a/restaurantsearchservice-local.properties
+++ b/restaurantsearchservice-local.properties
@@ -1,5 +1,5 @@
 #localhost config
-spring.datasource.url=jdbc:mysql://localhost:3306/restaurantdb     
-eureka.client.serviceUrl.defaultZone=http://localhost:8345/eureka/
+#spring.datasource.url=jdbc:mysql://localhost:3306/restaurantdb     
+#eureka.client.serviceUrl.defaultZone=http://localhost:8345/eureka/
 
-server.port=8789
+#server.port=8789
