--- a/restaurantsearchservice-dev.properties
+++ b/restaurantsearchservice-dev.properties
@@ -1,1 +1,6 @@
 
+#localhost config
+spring.datasource.url=jdbc:mysql://localhost:3306/restaurantdb     
+eureka.client.serviceUrl.defaultZone=http://localhost:8345/eureka/
+
+server.port=8789
